--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -22,6 +22,11 @@ preference = "1.2.1"
 datastorePreferences = "1.1.1"
 kotlinxCoroutinesCore = "1.7.3"
 
+moshiKotlin = "1.11.0"
+moshiKotlinCodegen = "1.15.1"
+workRuntime = "2.8.1"
+androidAsyncHttp = "1.4.10"
+
 [libraries]
 androidx-core-ktx = { group = "androidx.core", name = "core-ktx", version.ref = "coreKtx" }
 github-glide = { module = "com.github.bumptech.glide:glide", version.ref = "glide" }
@@ -45,6 +50,11 @@ androidx-preference = { group = "androidx.preference", name = "preference", vers
 androidx-datastore-preferences = { module = "androidx.datastore:datastore-preferences", version.ref = "datastorePreferences" }
 kotlinx-coroutines-core = { module = "org.jetbrains.kotlinx:kotlinx-coroutines-core", version.ref = "kotlinxCoroutinesCore" }
 kotlinx-coroutines-android = { module = "org.jetbrains.kotlinx:kotlinx-coroutines-android", version.ref = "kotlinxCoroutinesCore" }
+
+androidx-work-runtime = { module = "androidx.work:work-runtime", version.ref = "workRuntime" }
+android-async-http = { module = "com.loopj.android:android-async-http", version.ref = "androidAsyncHttp" }
+moshi-kotlin = { module = "com.squareup.moshi:moshi-kotlin", version.ref = "moshiKotlin" }
+moshi-kotlin-codegen = { module = "com.squareup.moshi:moshi-kotlin-codegen", version.ref = "moshiKotlinCodegen" }
 
 [plugins]
 android-application = { id = "com.android.application", version.ref = "agp" }
